Header spacing fix

--- a/src/pages/partials/header.css
+++ b/src/pages/partials/header.css
@@ -38,7 +38,7 @@
     border-style: solid;
     background: none; 
     font-size: 2.5rem;
-    
+    position: absolute;
     color: #0073CF;
 }
 
@@ -51,7 +51,7 @@
     border: none;
     background: none; 
     font-size: 2.8rem;
-   
+    position: absolute;
     color: #0073CF;
 }
 
